--- a/index-cabinet.html
+++ b/index-cabinet.html
@@ -494,7 +494,7 @@
             </div>
             <div class="row align-items-center">
               <div class="col-xs-12 col-sm-12">
-                <nav class="cabinet__nav-tabs">
+                <nav class="cabinet__nav-tabs navigation-row">
                   <div class="nav nav-tabs" id="nav-tab" role="tablist"><a class="nav-item nav-link active" id="nav-tab-favorites" data-toggle="tab" href="#nav-favorites" role="tab" aria-controls="nav-favorites" aria-selected="true">Избранное</a><a class="nav-item nav-link" id="nav-tab-order" data-toggle="tab" href="#nav-order" role="tab" aria-controls="nav-order" aria-selected="false">Мои заказы</a><a class="nav-item nav-link" id="nav-tab-profile" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Профиль</a></div>
                   <div class="cabinet__btn-clear btn-hide">
                         <button class="button-clear btn-clear" type="button"><span class="button-clear__text">Очистить все</span></button>
@@ -2558,7 +2558,7 @@
                         <use xlink:href="static/img/svg/symbol/sprite.svg#cross"></use>
                       </svg>
                 </button>
-                <div class="row-box__picture"><img class="picture" src="/static/img/content/bicycle-order.png" alt="product"></div>
+                <div class="row-box__picture"><img class="picture" src="static/img/content/bicycle-order.png" alt="product"></div>
               </div>
               <div class="row-box__column-right">
                 <div class="row-box__column-info">
@@ -2592,7 +2592,7 @@
                         <use xlink:href="static/img/svg/symbol/sprite.svg#cross"></use>
                       </svg>
                 </button>
-                <div class="row-box__picture"><img class="picture" src="/static/img/content/bicycle-order.png" alt="product"></div>
+                <div class="row-box__picture"><img class="picture" src="static/img/content/bicycle-order.png" alt="product"></div>
               </div>
               <div class="row-box__column-right">
                 <div class="row-box__column-info">
@@ -2625,7 +2625,7 @@
                         <use xlink:href="static/img/svg/symbol/sprite.svg#cross"></use>
                       </svg>
                 </button>
-                <div class="row-box__picture"><img class="picture" src="/static/img/content/bicycle-order.png" alt="product"></div>
+                <div class="row-box__picture"><img class="picture" src="static/img/content/bicycle-order.png" alt="product"></div>
               </div>
               <div class="row-box__column-right">
                 <div class="row-box__column-info">
