--- a/index-post.html
+++ b/index-post.html
@@ -478,7 +478,7 @@
             </div>
             <div class="row">
               <div class="col-12 col-sm-12">
-                <div class="post__picture"><img class="picture" src="/static/img/content/post.jpg" alt="post"></div>
+                <div class="post__picture"><img class="picture" src="static/img/content/post.jpg" alt="post"></div>
                 <div class="post__date-box">
                   <div class="date-box">
                     <div class="date-box__item">
@@ -866,7 +866,7 @@
                         <use xlink:href="static/img/svg/symbol/sprite.svg#cross"></use>
                       </svg>
                 </button>
-                <div class="row-box__picture"><img class="picture" src="/static/img/content/bicycle-order.png" alt="product"></div>
+                <div class="row-box__picture"><img class="picture" src="static/img/content/bicycle-order.png" alt="product"></div>
               </div>
               <div class="row-box__column-right">
                 <div class="row-box__column-info">
@@ -900,7 +900,7 @@
                         <use xlink:href="static/img/svg/symbol/sprite.svg#cross"></use>
                       </svg>
                 </button>
-                <div class="row-box__picture"><img class="picture" src="/static/img/content/bicycle-order.png" alt="product"></div>
+                <div class="row-box__picture"><img class="picture" src="static/img/content/bicycle-order.png" alt="product"></div>
               </div>
               <div class="row-box__column-right">
                 <div class="row-box__column-info">
@@ -933,7 +933,7 @@
                         <use xlink:href="static/img/svg/symbol/sprite.svg#cross"></use>
                       </svg>
                 </button>
-                <div class="row-box__picture"><img class="picture" src="/static/img/content/bicycle-order.png" alt="product"></div>
+                <div class="row-box__picture"><img class="picture" src="static/img/content/bicycle-order.png" alt="product"></div>
               </div>
               <div class="row-box__column-right">
                 <div class="row-box__column-info">
