--- a/index-card.html
+++ b/index-card.html
@@ -1200,21 +1200,21 @@
                             <div class="choose-colors"><a class="choose-colors__item" href="#"><img class="choose-colors__picture" data-alt-src="static/img/content/bicycle-1.png" src="static/img/content/bicycle-2.png" alt="bicycle"></a><a class="choose-colors__item" href="#"><img class="choose-colors__picture" data-alt-src="static/img/content/bicycle-2.png" src="static/img/content/bicycle-3.png" alt="bicycle"></a></div>
                           </div>
                         </div>
-                        <div class="card-env__box"><a class="card-env__title" href="#">Motion DD 29" 2017</a>
+                        <div class="card-env__box"><a class="card-env__title" href="#">Велосипед Motion DD 29" 2017</a>
                           <p class="card-env__title-sub">Optimabikes</p>
                         </div>
                         <div class="card-env__line"></div>
                         <div class="card-env__price-list">
                           <div class="price-list">
                             <p class="price-list__line-through">6573 грн</p>
-                            <p class="price-list__value">5259 грн</p>
+                            <p class="price-list__value">5259<span>грн</span></p>
                           </div>
                           <div class="price-list">
                             <p class="price-list__bonus">+170 грн. бонус</p>
                           </div>
                         </div>
                         <div class="card-env__button-list">
-                          <div class="button-list">
+                          <div class="button-list open-product">
                                 <button class="button-yellow" type="button">
                                       <svg class="icon icon-cart ">
                                         <use xlink:href="static/img/svg/symbol/sprite.svg#cart"></use>
@@ -1310,21 +1310,21 @@
                             <div class="choose-colors"><a class="choose-colors__item" href="#"><img class="choose-colors__picture" data-alt-src="static/img/content/bicycle-1.png" src="static/img/content/bicycle-2.png" alt="bicycle"></a><a class="choose-colors__item" href="#"><img class="choose-colors__picture" data-alt-src="static/img/content/bicycle-2.png" src="static/img/content/bicycle-3.png" alt="bicycle"></a></div>
                           </div>
                         </div>
-                        <div class="card-env__box"><a class="card-env__title" href="#">Motion DD 29" 2017</a>
+                        <div class="card-env__box"><a class="card-env__title" href="#">Велосипед Motion DD 29" 2017</a>
                           <p class="card-env__title-sub">Optimabikes</p>
                         </div>
                         <div class="card-env__line"></div>
                         <div class="card-env__price-list">
                           <div class="price-list">
                             <p class="price-list__line-through">6573 грн</p>
-                            <p class="price-list__value">5259 грн</p>
+                            <p class="price-list__value">5259<span>грн</span></p>
                           </div>
                           <div class="price-list">
                             <p class="price-list__bonus">+170 грн. бонус</p>
                           </div>
                         </div>
                         <div class="card-env__button-list">
-                          <div class="button-list">
+                          <div class="button-list open-product">
                                 <button class="button-yellow" type="button">
                                       <svg class="icon icon-cart ">
                                         <use xlink:href="static/img/svg/symbol/sprite.svg#cart"></use>
@@ -1420,21 +1420,21 @@
                             <div class="choose-colors"><a class="choose-colors__item" href="#"><img class="choose-colors__picture" data-alt-src="static/img/content/bicycle-1.png" src="static/img/content/bicycle-2.png" alt="bicycle"></a><a class="choose-colors__item" href="#"><img class="choose-colors__picture" data-alt-src="static/img/content/bicycle-2.png" src="static/img/content/bicycle-3.png" alt="bicycle"></a></div>
                           </div>
                         </div>
-                        <div class="card-env__box"><a class="card-env__title" href="#">Motion DD 29" 2017</a>
+                        <div class="card-env__box"><a class="card-env__title" href="#">Велосипед Motion DD 29" 2017</a>
                           <p class="card-env__title-sub">Optimabikes</p>
                         </div>
                         <div class="card-env__line"></div>
                         <div class="card-env__price-list">
                           <div class="price-list">
                             <p class="price-list__line-through">6573 грн</p>
-                            <p class="price-list__value">5259 грн</p>
+                            <p class="price-list__value">5259<span>грн</span></p>
                           </div>
                           <div class="price-list">
                             <p class="price-list__bonus">+170 грн. бонус</p>
                           </div>
                         </div>
                         <div class="card-env__button-list">
-                          <div class="button-list">
+                          <div class="button-list open-product">
                                 <button class="button-yellow" type="button">
                                       <svg class="icon icon-cart ">
                                         <use xlink:href="static/img/svg/symbol/sprite.svg#cart"></use>
@@ -1530,14 +1530,14 @@
                             <div class="choose-colors"><a class="choose-colors__item" href="#"><img class="choose-colors__picture" data-alt-src="static/img/content/bicycle-1.png" src="static/img/content/bicycle-2.png" alt="bicycle"></a><a class="choose-colors__item" href="#"><img class="choose-colors__picture" data-alt-src="static/img/content/bicycle-2.png" src="static/img/content/bicycle-3.png" alt="bicycle"></a></div>
                           </div>
                         </div>
-                        <div class="card-env__box"><a class="card-env__title" href="#">Motion DD 29" 2017</a>
+                        <div class="card-env__box"><a class="card-env__title" href="#">Велосипед Motion DD 29" 2017</a>
                           <p class="card-env__title-sub">Optimabikes</p>
                         </div>
                         <div class="card-env__line"></div>
                         <div class="card-env__price-list">
                           <div class="price-list">
                             <p class="price-list__line-through">6573 грн</p>
-                            <p class="price-list__value">5259 грн</p>
+                            <p class="price-list__value">5259<span>грн</span></p>
                           </div>
                           <div class="price-list">
                             <p class="price-list__bonus">+170 грн. бонус</p>
@@ -1636,21 +1636,21 @@
                             <div class="choose-colors"><a class="choose-colors__item" href="#"><img class="choose-colors__picture" data-alt-src="static/img/content/bicycle-1.png" src="static/img/content/bicycle-2.png" alt="bicycle"></a><a class="choose-colors__item" href="#"><img class="choose-colors__picture" data-alt-src="static/img/content/bicycle-2.png" src="static/img/content/bicycle-3.png" alt="bicycle"></a></div>
                           </div>
                         </div>
-                        <div class="card-env__box"><a class="card-env__title" href="#">Motion DD 29" 2017</a>
+                        <div class="card-env__box"><a class="card-env__title" href="#">Велосипед Motion DD 29" 2017</a>
                           <p class="card-env__title-sub">Optimabikes</p>
                         </div>
                         <div class="card-env__line"></div>
                         <div class="card-env__price-list">
                           <div class="price-list">
                             <p class="price-list__line-through">6573 грн</p>
-                            <p class="price-list__value">5259 грн</p>
+                            <p class="price-list__value">5259<span>грн</span></p>
                           </div>
                           <div class="price-list">
                             <p class="price-list__bonus">+170 грн. бонус</p>
                           </div>
                         </div>
                         <div class="card-env__button-list">
-                          <div class="button-list">
+                          <div class="button-list open-product">
                                 <button class="button-yellow" type="button">
                                       <svg class="icon icon-cart ">
                                         <use xlink:href="static/img/svg/symbol/sprite.svg#cart"></use>
@@ -1746,21 +1746,21 @@
                             <div class="choose-colors"><a class="choose-colors__item" href="#"><img class="choose-colors__picture" data-alt-src="static/img/content/bicycle-1.png" src="static/img/content/bicycle-2.png" alt="bicycle"></a><a class="choose-colors__item" href="#"><img class="choose-colors__picture" data-alt-src="static/img/content/bicycle-2.png" src="static/img/content/bicycle-3.png" alt="bicycle"></a></div>
                           </div>
                         </div>
-                        <div class="card-env__box"><a class="card-env__title" href="#">Motion DD 29" 2017</a>
+                        <div class="card-env__box"><a class="card-env__title" href="#">Велосипед Motion DD 29" 2017</a>
                           <p class="card-env__title-sub">Optimabikes</p>
                         </div>
                         <div class="card-env__line"></div>
                         <div class="card-env__price-list">
                           <div class="price-list">
                             <p class="price-list__line-through">6573 грн</p>
-                            <p class="price-list__value">5259 грн</p>
+                            <p class="price-list__value">5259<span>грн</span></p>
                           </div>
                           <div class="price-list">
                             <p class="price-list__bonus">+170 грн. бонус</p>
                           </div>
                         </div>
                         <div class="card-env__button-list">
-                          <div class="button-list">
+                          <div class="button-list open-product">
                                 <button class="button-yellow" type="button">
                                       <svg class="icon icon-cart ">
                                         <use xlink:href="static/img/svg/symbol/sprite.svg#cart"></use>
@@ -1857,6 +1857,12 @@
         </div>
         <div class="new-models">
           <div class="container">
+            <div class="row">
+              <div class="col-12 col-sm-12 d-sm-flex d-md-none d-lg-none">
+                <div class="accessories__button-gray"><a class="button-gray" href="#">Посмотреть все</a>
+                </div>
+              </div>
+            </div>
             <div class="row align-items-center">
               <div class="col-12 col-sm-12">
                 <div class="new-models__slide-controls">
@@ -2456,6 +2462,16 @@
                       </div>
                     </div>
                   </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="news">
+          <div class="container">
+            <div class="row">
+              <div class="col-12 col-sm-12 d-sm-flex d-md-none d-lg-none">
+                <div class="accessories__button-gray"><a class="button-gray" href="#">Посмотреть все</a>
                 </div>
               </div>
             </div>
